--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-white text-black py-4 text-center">
-<p style="font-size: 0.6em; line-height: 1.2; margin: 0">&copy; <span id="current-year"></span> Seth Watts</p>
+<p style="font-size: 0.6em; line-height: 1.2; margin: 0">&copy; <span id="current-year"></span> Olivia Shaw </p>
         <p style="font-size: 0.6em; line-height: 1.2; margin: 0">
             Created in 
             <a href="https://www.r-project.org/" class="text-light">
